Applied spotless.